# vrkit-platform

./: .clang-format  .gitattributes  .gitignore  .npmrc  .prettierrc.js  .psenvrc  .swcrc  .vrkit-dev.json  .vrkit-dev.local.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  TODO.md  irt.code-workspace  jest.config.js  package-lock.json  package.json  plopfile.js  prettier.config.cjs  pyproject.toml  tsconfig.base.json  tsconfig.json  vcpkg.full.json  vcpkg.json
.github/workflows/: build-workflow.yml  build.yml  publish.yml  release-workflow.yml  release.yml
.run/: All Tests in vrkit-app.run.xml  VRKit App (Node external console).run.xml  VRKit Electron (BRK) & OpenXR Demo App.run.xml  VRKit_ Debug Native & JS.run.xml  VRKit_ Electron Main (BRK) (w_o devtools).run.xml  VRKit_ Electron Main (BRK).run.xml  VRKit_ Electron Main (enable-logging).run.xml  VRKit_ Electron Main.run.xml  VRKit_ Main.run.xml  irsdk_tool_ create_track_map (Indy).run.xml  irsdk_tool_ create_track_map (RoadAtlanta).run.xml  irsdk_tool_ create_track_map (motegi_twinring).run.xml  irsdk_tool_ create_track_map (suzuka).run.xml  irt_tool (dashboard-list) .run.xml  irt_tool (help).run.xml  irt_tool (help-all).run.xml  irt_tool (play).run.xml  irt_tool (record).run.xml  irt_tool (write output).run.xml  irt_ui.run.xml  vrk_tool (process-all-telemetry).run.xml  vrk_tool (service-daemon).run.xml  vrkit-app_start-brk.run.xml  vrkit-app_start.run.xml  vrkit_native_interop (jest).run.xml  vrkit_native_interop (jest-brk).run.xml  vrkit_native_interop (js attach).run.xml  vrkit_native_interop.run.xml  vrkit_tool (feeder & viewer).run.xml  vrkit_tool (play & viewer).run.xml  vrkit_tool (shm-feeder).run.xml  vrkit_tool (shm-viewer).run.xml
art/icons/: vrkit-plugin-internal-icon.ai  vrkit-plugin-trackmap-icon.ai
art/logo/: vr-racer-logo.ai  vrkit-app-icon.ai  vrkit-app-logo.ai
art/mockups/: xd-vrkit-app.xd
cmake/: dependencies.cmake  embed_resource.cmake  example_target.cmake  fs.cmake  qt.cmake  system.cmake  targets.cmake  tiny_orm.cmake
data/dashboards/: simple-track-map.dashboard.irt.json
data/ibt/: ibt-fixture-superformulalights324_montreal.ibt  ligierjsp320_twinring.ibt
data/lap-trajectory/: 104__phoenix_oval__Oval.trackmap  127__roadatlanta_full__Full_Course.trackmap  144__mosport__NO_CONFIG_NAME.trackmap  153__midohio_full__Full_Course.trackmap  154__midohio_chicane__Chicane.trackmap  27__daytona_oval__Oval.trackmap  46__barber_full__Full_Course.trackmap  47__lagunaseca__NO_CONFIG_NAME.trackmap  95__sebring_international__International.trackmap
data/telemetry-dump/: telemetry-dump-01.json
data/track_maps/: 145__brandshatch_grandprix__Grand_Prix.trackmap  163__spa_up__Grand_Prix_Pit.trackmap  165__spa_combined__Endurance.trackmap  166__okayama_full__Full_Course.trackmap  168__suzuka_grandprix__Grand_Prix.trackmap  179__longbeach__NO_CONFIG_NAME.trackmap  180__oulton_international__International.trackmap  18__roadamerica_full__Full_Course.trackmap  192__daytona_2011_road__Road_Course.trackmap  195__twinring_fullrc__Full_Road_Course.trackmap  199__zolder_gp__Grand_Prix.trackmap  212__interlagos_gp__Grand_Prix.trackmap  218__montreal__NO_CONFIG_NAME.trackmap  219__bathurst__NO_CONFIG_NAME.trackmap  229__cota_gp__Grand_Prix.trackmap  239__monza_full__NO_CONFIG_NAME.trackmap  244__monza_gpsecondchicane__NO_CONFIG_NAME.trackmap  250__nurburgring_gp__NO_CONFIG_NAME.trackmap  255__nurburgring_gpnochicane__NO_CONFIG_NAME.trackmap  266__imola_gp__NO_CONFIG_NAME.trackmap  297__snetterton_300__300_Circuit.trackmap  298__snetterton_200__200_Circuit.trackmap  319__belleisle__NO_CONFIG_NAME.trackmap  324__tsukuba_2kfull__NO_CONFIG_NAME.trackmap  341__silverstone_2019_gp__Arena_Grand_Prix.trackmap  342__silverstone_2019_international__International.trackmap  345__barcelona_gp__Full_Course.trackmap  349__barcelona_historic__Historic_Circa__95.trackmap  350__charlotte_2018_2019_roval__Road_Course.trackmap  353__limerock_2019_gp__Grand_Prix.trackmap  354__limerock_2019_chicanes__Chicane.trackmap  390__hockenheim_gp__Grand_Prix.trackmap  403__spielberg_gp__Grand_Prix.trackmap  413__hungaroring__Grand_Prix.trackmap  434__watkinsglen_2021_fullcourse__Boot.trackmap  435__watkinsglen_2021_fullnoloop__Classic_Boot.trackmap  443__sandown__NO_CONFIG_NAME.trackmap  448__indianapolis_2022_road__Road_Course.trackmap  451__rudskogen__NO_CONFIG_NAME.trackmap  463__magnycours_gp__Grand_Prix.trackmap  (+15 more)
docs/: IRT Class Diagram.md
docs/Planning/: IRT Kanban Board.md  iRacingTools Tasks & Todos.md
docs/Services/: IRT Services.md
docs/Snippets/: Graphics Snippets.md
docs/etc/: Class Model PUML.md  IRT Class Diagram.md  IRacing Session Info YAML PUML.md  iRacing Data API.md
etc/lnav/: README.md  vrkit_json_log.json  vrkit_log.json
etc/schema/: PluginManifest.schema.json  iracing_session_info.sample.puml  iracing_session_info.sample.yaml  iracing_session_info.schema.json
etc/webpack/: tsconfig.json  tsconfig.webpack.json
notebooks/: car-timing-investigation.ipynb  display-scaling.ipynb  session-map-data-frame.ipynb  session-map.ipynb  telemetry-data.ipynb  ts-pattern-match-test.mjs
patches/: @protobuf-ts+runtime+2.9.4.patch  file-selector+0.6.0.patch  npm-check+6.0.1.patch  serializr+3.0.2.patch  webpack-cli+5.1.4.patch
scripts/: build-packaged-app.mjs  bump-platform-version.mjs  dev.mjs  embed_resource.py  fix-js-imports.ts  format-package-json.ts  generate-cpp-headers.py  generate-cpp-qobjects.py  get-all-mjs-imports.ps1  hid-playground.js  image-to-dataurl.ps1  json5-to-json-yaml.ts  npm-check-packages.ts  pack-sdk.mjs  package.json  playground-glob.ts  playground.mjs  postinstall.mjs  prod-env.mjs  protoc-cpp-generate.ps1  protoc-json-schema.bat  protoc-json-schema.ps1  protoc-python.bat  protoc-ts.ps1  publish-sdk.mjs  raw-image-viewer.py  release-sdk.mjs  release-version.mjs  svg-to-dataurl.ps1  telem-extract-vars.py  test-lodash-playground.ts  tsconfig.json  vrkit-openxr-layers.ts  yaml-encode-decode-gen.py
scripts/openxr/: Install-Layer.ps1  Uninstall-Layer.ps1
(+457 files in other folders)
